Update economy API usage + rework command registration